# NeuroTECH-BCI

./: .gitignore  Dockerfile  docker-compose.yml  install_dependencies.bat  package-lock.json  package.json  pipe.bat  pipeline.py  requirements.txt  run_system_dev.bat  test_api.py  test_out.txt  test_out_new.txt  verify_hid.py  verify_syntax_v2.py
.stitch/: DESIGN.md
backend/: backend_executable.spec  create_admin.py  install_dependencies.bat  launcher.py  passenger_wsgi.py  pipeline.py  pyproject.toml  requirements.txt  run_system.bat  run_system_dev.bat  simulate_event.py  test_bf.py  test_pynput.py  test_ssvep.py
backend/analysis/: consumers.py  routing.py  urls.py  views.py
backend/analysis/ml/: rps_detector.py
backend/config/: asgi.py  calibration_config.json  filter_config.json  sensor_config.json  settings.py  urls.py
backend/config_files/: calibration_config.json  feature_config.json  filter_config.json  sensor_config.json
backend/core/acquisition/: __init__.py  acquisition_app.py  lsl_streams.py  packet_parser.py  serial_reader.py  stream_manager.py
backend/core/calibration/: calibration_manager.py
backend/core/database/: db_manager.py  seed_data.py
backend/core/feature/: router.py
backend/core/learning/: emg_trainer.py  eog_trainer.py  generate_synthetic_data.py  tree_utils.py
backend/core/processing/: eeg_processor.py  emg_processor.py  eog_processor.py  filter_router.py  pipeline.py
backend/core/utils/: __init__.py  config.py  logging_cfg.py  neurobench.py
backend/src/: __init__.py
backend/tests/: test_pipeline_logic.py  test_websocket_integration.py
(+422 files in other folders)
